...
}

let core = Core()

class StockListTableViewController: UITableViewController {

    private let companies = ["AAPL" : "Apple Inc", "GOOG" : "Google Inc", "AMZN" : "Amazon.com, Inc", "FB" : "Facebook Inc", "MSFT": "Microsoft Inc"]
    
    var allStocks = [Stock]()
    
    override func viewDidLoad() {
        super.viewDidLoad()
        getStockData()
...
