...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="pOc-sf-ZqX" id="HAD-To-Mhc"/>
                            <outlet property="delegate" destination="pOc-sf-ZqX" id="6Zw-D0-qVI"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Stocks" id="Uwe-Sy-p8z"/>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="9wf-G7-aAe" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1228" y="-74.212893553223395"/>
        </scene>
        <!--Detail Stock View Controller-->
...
