//
//  StockQuoteUITests.swift
//  StockQuoteUITests
//
//  Created by Huzaifa Gadiwala on 27/1/19.
//  Copyright © 2019 Huzaifa Gadiwala. All rights reserved.
//

import XCTest

class StockQuoteUITests: XCTestCase {

    override func setUp() {
        // Put setup code here. This method is called before the invocation of each test method in the class.

        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false

        // UI tests must launch the application that they test. Doing this in setup will make sure it happens for each test method.
        XCUIApplication().launch()

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }

    override func tearDown() {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
    }

    func testValidCellDetailSuccess() {
        
        
        let app = XCUIApplication()
        let tablesQuery = app.tables
        tablesQuery/*@START_MENU_TOKEN@*/.staticTexts["AAPL"]/*[[".cells.staticTexts[\"AAPL\"]",".staticTexts[\"AAPL\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.tap()
        
        let stocksButton = app.navigationBars["StockQuote.DetailStockView"].buttons["Stocks"]
        stocksButton.tap()
        tablesQuery/*@START_MENU_TOKEN@*/.staticTexts["FB"]/*[[".cells.staticTexts[\"FB\"]",".staticTexts[\"FB\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.tap()
        stocksButton.tap()
       
        
        
    }

}

